--- a/index.ipynb
+++ b/index.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "#hide\n",
-    "from your_lib.core import *"
+    "from test_library.core import *"
    ]
   },
   {
@@ -48,10 +48,23 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello John!'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Fill me in please! Don't forget code examples:"
+    "say_hello(\"John\")"
    ]
   },
   {
@@ -62,7 +75,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "'Hello Kathy!'"
       ]
      },
      "execution_count": null,
@@ -71,7 +84,7 @@
     }
    ],
    "source": [
-    "1+1"
+    "say_hello(\"Kathy\")"
    ]
   },
   {
